2010-03-14  Maciej Stachowiak  <mjs@apple.com>

        Added canvas perf demo for whatwg.

        * demos/canvas-perf: Added.
        * demos/canvas-perf/canvas.html: Added.
        * demos/canvas-perf/kraken.jpg: Added.

2010-03-09  Adam Roben  <aroben@apple.com>

        Add a link to the Contributors Meeting registration form in the
        sidebar

        Rubber-stamped in advance by Adele Peterson.

        * nav.inc: Added a link underneath "Trac".

2010-02-26  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Adele Peterson.

        Update Security Group Members list.

        * security/security-group-members.html:

2010-02-23  Jessie Berlin  <jberlin@webkit.org>

        Reviewed by Eric Seidel and Adam Roben.

        Debugging WebKit on Windows should mention WebKit.sln as an alternative to running debug-safari.
        https://bugs.webkit.org/show_bug.cgi?id=35098

        * building/debug.html:
        Add instructions on how to build and run WebKit from within Visual Studio.

2010-02-20  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Adam Barth.

        Add sunspider-0.9.1 to the site in preparation for announcing it.
        https://bugs.webkit.org/show_bug.cgi?id=35206

        * perf/sunspider-0.9.1: Added.
        * perf/sunspider-0.9.1/json2.js: Added.
        * perf/sunspider-0.9.1/sunspider-0.9: Added.
        * perf/sunspider-0.9.1/sunspider-0.9.1: Added.
        * perf/sunspider-0.9.1/sunspider-0.9.1/driver.html: Added.
        * perf/sunspider-0.9.1/sunspider-0.9.1/results.html: Added.
        * perf/sunspider-0.9.1/sunspider-0.9.1/sunspider-test-contents.js: Added.
        * perf/sunspider-0.9.1/sunspider-0.9.1/sunspider-test-prefix.js: Added.
        * perf/sunspider-0.9.1/sunspider-0.9/driver.html: Added.
        * perf/sunspider-0.9.1/sunspider-0.9/results.html: Added.
        * perf/sunspider-0.9.1/sunspider-0.9/sunspider-test-contents.js: Added.