@@ -1,3 +1,9 @@
+2010-03-15  Maciej Stachowiak  <mjs@apple.com>
+
+        Tweak canvas perf demo.
+
+        * demos/canvas-perf/canvas.html:
+
 2010-03-14  Maciej Stachowiak  <mjs@apple.com>
 
         Added canvas perf demo for whatwg.
